# Progetto_programmazione

./: .gitignore  1v.txt  2v.txt  3v.txt  4v.txt  5v.txt  6v.txt  Animation.cpp  Animation.h  Boss.cpp  Boss.h  CMakeLists.txt  Dice.cpp  Dice.h  Dungeonarea.cpp  Dungeonarea.h  Entity.cpp  Entity.h  Events.cpp  Events.h  Fireball.cpp  Fireball.h  GameFileException.cpp  GameFileException.h  Hud.cpp  Hud.h  Iceslide.cpp  Iceslide.h  Item.cpp  Item.h  Littlelight.cpp  Littlelight.h  Loader.cpp  Loader.h  Mario.cpp  Mario.h  Menu.cpp  Menu.h  Object.cpp  Object.h  (+19 more)
assets/: fire.jfif  readme license.txt
map/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
playerSave/: save.txt
project/: Achievements.cpp  Achievements.h  Animation.cpp  Animation.h  Boss.cpp  Boss.h  CMakeLists.txt  CrystalWall.cpp  CrystalWall.h  Dice.cpp  Dice.h  Dreadgen.cpp  Dreadgen.h  Dungeonarea.cpp  Dungeonarea.h  Entity.cpp  Entity.h  Events.cpp  Events.h  Fireball.cpp  Fireball.h  FollowingEnemies.cpp  FollowingEnemies.h  GameFileException.cpp  GameFileException.h  Hud.cpp  Hud.h  Iceslide.cpp  Iceslide.h  Item.cpp  Item.h  LineEnemies.cpp  LineEnemies.h  Littlelight.cpp  Littlelight.h  Loader.cpp  Loader.h  Mario.cpp  Mario.h  Menu.cpp  (+30 more)
project/Google_tests/: AbsoluteTest.cpp  CMakeLists.txt  TestSetting.cpp  TestSetting.h
vectors/: 1v.txt  2v.txt  3v.txt  4v.txt  5v.txt  6v.txt  readme.txt
